--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.chorey'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.chorey"
         minSdk 24
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
     implementation 'androidx.startup:startup-runtime:1.1.1'
+    implementation "androidx.activity:activity:1.7.0-alpha02"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
