--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,15 @@
         android:roundIcon="@mipmap/chorey_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Chorey"
-        android:usesCleartextTraffic="true"
         android:enableOnBackInvokedCallback="true"
         tools:targetApi="tiramisu">
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713"/>
+            android:value="ca-app-pub-7280349628854769~4783014580"/>
 
 <!--        <meta-data-->
+<!--        android:value="ca-app-pub-3940256099942544~3347511713"/>-->
 <!--            android:name="com.google.android.gms.ads.ca-app-pub-7280349628854769~4783014580"-->
 <!--            android:value="ca-app-pub-7280349628854769/6593993547" />-->
 
