--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Chorey"
         android:enableOnBackInvokedCallback="true"
+        android:configChanges="uiMode|orientation|screenSize"
         tools:targetApi="tiramisu">
 
         <meta-data
