--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:supportsRtl="true"
         android:theme="@style/Chorey"
         android:enableOnBackInvokedCallback="true"
-        android:configChanges="uiMode|orientation|screenSize"
         tools:targetApi="tiramisu">
 
         <meta-data
@@ -28,7 +27,8 @@
         <!--            android:screenOrientation="portrait"-->
         <activity
             android:name=".MainActivity"
-            android:configChanges="orientation|screenSize"
+            android:configChanges="uiMode|orientation|screenSize"
+            android:windowSoftInputMode="adjustPan"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
